<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.capstone.chesscommander.chesscommander.home_screen">

    <ImageView
        android:id="@+id/home_screen_logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/chesscommandercropped"
        android:contentDescription="Chess Commander Home Screen"
        android:focusable="true"
        android:focusableInTouchMode="false" />

    <Button
        android:id="@+id/home_screen_pve_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:contentDescription="Play against computer"
        android:contextClickable="false"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:onClick="onPvEButtonClick"
        android:text="Player vs Computer"
        android:textSize="25sp" />

    <Button
        android:id="@+id/home_screen_pvp_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_screen_pve_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:clickable="true"
        android:contentDescription="Play against another Player"
        android:contextClickable="false"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:onClick="onPVPButtonClick"
        android:text="Player vs Player"
        android:textSize="25sp" />

    <Button
        android:id="@+id/home_screen_freeplay_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_screen_pvp_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:clickable="true"
        android:contentDescription="Free Play"
        android:contextClickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:onClick="onFreePlayButtonClick"
        android:text="Free Play"
        android:textSize="25sp" />
</RelativeLayout>
