...
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:id="@+id/fp_options_logo_imageView"
        android:layout_alignParentTop="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
...

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Computer"
        android:id="@+id/freeplay_p1Color_textView"
        android:textSize="35sp"
        android:paddingBottom="10dp"
        android:contentDescription="Color of pieces to play as"
        android:focusable="true"
        android:textColor="#ffffff"
...
