...
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color"
        android:id="@+id/pve_color_textView"
        android:textSize="35sp"
        android:paddingBottom="10dp"
        android:contentDescription="Color of pieces to play as"
        android:focusable="true"
        android:layout_below="@+id/pve_difficulty_radioGroup"
        android:layout_alignStart="@+id/pve_difficulty_textview"
...
