...
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Player"
                android:id="@+id/radioButton2"
                android:focusable="true"
                android:clickable="true"
                android:contentDescription="Play as Black Pieces"
                android:textSize="25sp"
                android:checked="false"
...
