<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/pve_logo_imageView"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/chesscommandercropped"
        android:contentDescription="Play against Computer Options"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:tag="pve"/>

    <TextView
        android:id="@+id/pve_difficulty_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pve_logo_imageView"
        android:layout_marginStart="22dp"
        android:layout_marginTop="33dp"
        android:contentDescription="Select Computer Difficulty"
        android:focusable="true"
        android:paddingBottom="10dp"
        android:text="Difficulty"
        android:textColor="#ffffff"
        android:textSize="35sp" />

    <RadioGroup
        android:id="@+id/pve_difficulty_radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pve_difficulty_textview"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pve_difficulty_easy_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/pve_difficulty_textview"
                android:layout_below="@+id/pve_difficulty_textview"
                android:layout_gravity="bottom|top"
                android:layout_marginTop="25dp"
                android:layout_weight=".33"
                android:checked="false"
                android:clickable="true"
                android:contentDescription="Easy Difficulty"
                android:focusable="true"
                android:onClick="onpveEasyDifficultyClick"
                android:text="Easy"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/pve_difficulty_medium_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/freeplay_difficulty_easy_radioButton"
                android:layout_gravity="top"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/freeplay_difficulty_easy_radioButton"
                android:layout_weight=".33"
                android:checked="false"
                android:clickable="true"
                android:contentDescription="Medium Difficulty"
                android:focusable="true"
                android:onClick="onpveMediumDifficultyClick"
                android:text="Medium"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/pve_difficulty_hard_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/cclogo_textView"
                android:layout_alignTop="@+id/freeplay_difficulty_medium_radioButton"
                android:layout_weight=".33"
                android:checked="false"
                android:clickable="true"
                android:contentDescription="Hard Difficulty"
                android:focusable="true"
                android:onClick="onpveHardDifficultyClick"
                android:text="Hard"
                android:textColor="#ffffff"
                android:textSize="25sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/pve_color_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pve_difficulty_textview"
        android:layout_below="@+id/pve_difficulty_radioGroup"
        android:contentDescription="Select player color"
        android:focusable="true"
        android:paddingBottom="10dp"
        android:text="Player Color"
        android:textColor="#ffffff"
        android:textSize="35sp" />
    <RadioGroup
        android:id="@+id/pve_color_radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pve_color_textView"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pve_color_white_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:clickable="true"
                android:contentDescription="Play as white Pieces"
                android:focusable="true"
                android:onClick="onpveWhiteColorClick"
                android:text="White"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/pve_color_black_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:checked="false"
                android:clickable="true"
                android:contentDescription="Play as black Pieces"
                android:focusable="true"
                android:onClick="onpveBlackColorClick"
                android:text="Black"
                android:textColor="#ffffff"
                android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/pve_start_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:clickable="true"
        android:contentDescription="Start game"
        android:focusable="true"
        android:onClick="onpveStartGameButtonClick"
        android:text="Start Game"
        android:textSize="25sp" />


</RelativeLayout>
